added icons, and the first templates

--- a/index.html
+++ b/index.html
@@ -16,12 +16,10 @@
 </head>
 
 <body>
-    <!--[if lt IE 7]>
-      <p class="browsehappy">
-        You are using an <strong>outdated</strong> browser. Please
-        <a href="#">upgrade your browser</a> to improve your experience.
-      </p>
-    <![endif]-->
+    <page size="A4">
+        <span>Aurio</span>
+    </page>
+
     <div>
         <p>Aurio Estefan Augusto Pinto</p>
         <p>4800 Cao'an Hwy, Jiading District, Shanghai, China</p>
@@ -29,7 +27,7 @@
         <p>keep moving forward</p>
     </div>
 
-    <script src="" async defer></script>
+    <!-- <script src="" async defer></script> -->
 </body>
 
 </html>
