created a few folders

--- a/Html/template1.html
+++ b/Html/template1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>template1</title>
-    <link rel="stylesheet" href="./template1.css" />
+    <link rel="stylesheet" href="../Sass/template1.css" />
 </head>
 
 <body>
@@ -15,14 +15,14 @@
             <div id="left"></div>
             <div id="right">
                 <h1>Aurio Estefan Augusto Pinto</h1>
-                <h4>Tecnologist</h4>
+                <h4>Technologist</h4>
                 <div class="info">
-                    <img src="../Sass-Templates-/mobile.png" alt="" class="img" /> +86 18717897971
-                    <img src="../Sass-Templates-/linkin.png" alt="" class="img" /> linkedlnContribuent
+                    <img src="../Images/mobile.png" alt="" class="img" /> +86 18717897971
+                    <img src="../Images/linkin.png" alt="" class="img" /> linkedlnContribuent
                 </div>
                 <div class="info1">
-                    <img src="../Sass-Templates-/mail.png" alt="" class="img" /> auriopinto2000@tongji.edu.cn
-                    <img src="../Sass-Templates-/home.png" alt="" class="img" /> 4800 Cao'an Hwy, Jiading District, Shanghai, China
+                    <img src="../Images/mail.png" alt="" class="img" /> auriopinto2000@tongji.edu.cn
+                    <img src="../Images/home.png" alt="" class="img" /> 4800 Cao'an Hwy, Jiading District, Shanghai, China
                 </div>
             </div>
         </div>
