--- a/Html/index.html
+++ b/Html/index.html
@@ -16,16 +16,7 @@
 </head>
 
 <body>
-    <page size="A4">
-        <span>Aurio</span>
-    </page>
-
-    <div>
-        <p>Aurio Estefan Augusto Pinto</p>
-        <p>4800 Cao'an Hwy, Jiading District, Shanghai, China</p>
-        <p>auriopinto@outlook.com</p>
-        <p>keep moving forward</p>
-    </div>
+    <page size="A4"> </page>
 
     <!-- <script src="" async defer></script> -->
 </body>
