--- a/Html/template2.html
+++ b/Html/template2.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>template2</title>
+    <link rel="stylesheet" href="../Sass/template2.css" />
 </head>
 
-<body></body>
+<body>
+    <div>
+        Second one;
+    </div>
+</body>
 
 </html>
