--- a/Html/template1.html
+++ b/Html/template1.html
@@ -18,7 +18,7 @@
                 <h3>Technologist</h3>
                 <div class="info">
                     <img src="../Images/mobile.png" alt="" class="img" /> +86 18717897971
-                    <img src="../Images/linkin.png" alt="" class="img" /> linkedlnContribuent
+                    <!-- <img src="../Images/linkin.png" alt="" class="img" /> linkedlnContribuent -->
                 </div>
                 <div class="info1">
                     <img src="../Images/mail.png" alt="" class="img" /> auriopinto2000@tongji.edu.cn
