--- a/Html/template1.html
+++ b/Html/template1.html
@@ -14,15 +14,17 @@
         <div class="box">
             <div id="left"></div>
             <div id="right">
-                <h1>Aurio Estefan Augusto Pinto</h1>
-                <h3>Technologist</h3>
-                <div class="info">
-                    <img src="../Images/mobile.png" alt="" class="img" /> +86 18717897971
-                    <!-- <img src="../Images/linkin.png" alt="" class="img" /> linkedlnContribuent -->
+                <div class="text">
+                    <h1>Aurio Estefan Augusto Pinto</h1>
+                    <p>4800 Cao'an Hwy, Jiading District, Shanghai, China</p>
                 </div>
-                <div class="info1">
-                    <img src="../Images/mail.png" alt="" class="img" /> auriopinto2000@tongji.edu.cn
-                    <img src="../Images/home.png" alt="" class="img" /> 4800 Cao'an Hwy, Jiading District, Shanghai, China
+                <div class="info">
+                    <div>
+                        <p>auriopinto2000@tongji.edu.cn</p>
+                    </div>
+                    <div>
+                        <p>https://auriopinto.github.io/</p>
+                    </div>
                 </div>
             </div>
         </div>
